[package]
name = "complot"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.0"
spade = "1.8.2"
triangle-rs = { git = "https://github.com/rconan/triangle-rs.git", branch = "main" }
