[package]
name = "complot"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorous = "1.0.3"
num-traits = "0.2.14"
plotters = "0.3.0"
spade = {version = "1.8.2", optional=true}

[features]
tri = ["spade"]
