[package]
name = "complot"
version = "0.3.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2018"
license = "MIT"
description = "An idiomatic high-level wrapper to Rust plotters visualization crate"
repository = "https://github.com/rconan/complot"
documentation = "https://docs.rs/complot"
readme = "README.md"
categories = ["visualization"]

[dependencies]
colorous = "1.0.3"
num-traits = "0.2.14"
plotters = "^0.3"

[features]
default = ["svg"]
svg = []
png = []
